--- a/interactive/templates/interactive/advent_base.html
+++ b/interactive/templates/interactive/advent_base.html
@@ -35,6 +35,7 @@
 
     {% addtoblock "js" %}
         <script src="{% static "bootstrap/dist/js/bootstrap.min.js" %}"></script>
+        <script src="{% static "js/base.js" %}"></script>
     {% endaddtoblock %}
     {% render_block "css" %}
 
