--- a/interactive/templates/interactive/quiz.html
+++ b/interactive/templates/interactive/quiz.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends quiz.template %}
 {% load mediawiki_links %}
 {% load markdown_deux_tags %}
 {% load thumbnail %}
