--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
     <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
             {# bruker-dropdown #}
-            <li class="dropdown navbar-right">
+            <li class="dropdown">
                 <a href="#bruker" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user"></span>
                         {% firstof user.get_full_name user.username %}
