--- a/content/templates/content/images/render.html
+++ b/content/templates/content/images/render.html
@@ -1,5 +1,5 @@
 {% spaceless %}
-<div class="thumbnail {% if align %} pull-{{ align }}{% endif %}" style="width: 350px;">
+<div class="thumbnail {% if align %} pull-{{ align }}{% endif %}" style="width: {% if size == 'full' %}100%{% elif size == 'large' %}500px{% else %}350px{% endif %};">
     <a href="{{ image.file.url }}">
       <img class="img-responsive" src="{{ image.file.url }}" alt="{{ revision.get_filename }}" />
     </a>
