--- a/content/templates/content/album_image.html
+++ b/content/templates/content/album_image.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="">
   <h1>{{ album.title }}</h1>
-  <img src="{{ image.get_absolute_url }}" style="max-width: 100%; max-height: 100%;" />
+  <img src="{{ image.file.url }}" class="img-responsive" />
   <p>
     {{ image.description }}
   </p>
