--- a/content/templates/content/album_image.html
+++ b/content/templates/content/album_image.html
@@ -15,7 +15,7 @@
       <ul class="pager">
         {% if page_obj.has_previous %}
             <li class="previous">
-                <a href="{{ page_obj.previous_page_number }}"><span aria-hidden="true">&larr;</span> forrige</a>
+                <a href="../{{ page_obj.previous_page_number }}/"><span aria-hidden="true">&larr;</span> forrige</a>
             </li>
         {% endif %}
 
@@ -25,7 +25,7 @@
 
           {% if page_obj.has_next %}
               <li class="next">
-                  <a href="{{ page_obj.next_page_number }}">neste  <span aria-hidden="true">&rarr;</span></a>
+                  <a href="../{{ page_obj.next_page_number }}/">neste  <span aria-hidden="true">&rarr;</span></a>
               </li>
           {% endif %}
       </ul>
