--- a/content/templates/content/album_image.html
+++ b/content/templates/content/album_image.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="">
-  <h1>{{ album.title }}</h1>
+  <h1><a href="{{ album.get_absolute_url }}">{{ album.title }}</a></h1>
   <img src="{{ image.file.url }}" class="img-responsive" />
   <p>
     {{ image.description }}
