--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,57 +1,77 @@
 {% extends 'base.html' %}
 {% load highlight %}
+{% load static %}
+{% load thumbnail %}
 
 {% block content %}
 
-    <form method="get" action="" class="form-search">
-        <div style="margin-top: 15px; margin-bottom: 20px;"><div class="input-append"><input type="text" name="q" id="id_q" class="search-query" style="width:
-                25em;" placeholder="{% if not query %}Søk...{% else %}{% endif %}" {% if query %}value="{{ query }}"{% endif %}/>&nbsp;
-                <button type="submit" class="btn" value="Søk"><i class="icon-search"></i></button></div></div>
+<form method="get" action="" class="form-inline">
+    <div class="form-group">
+        <input type="text" name="q" id="id_q" class="form-control" style="" placeholder="Søk..." {% if query %}value="{{ query }}"{% endif %}/>
+        <button type="submit" class="btn btn-primary" value="Søk">
+            <span class="glyphicon glyphicon-search"></span>
+            Søk
+        </button>
+    </div>
+</form>
+<h2>Søkeresultater</h2>
 
-        <h2>Søkeresultater</h2>
-
-        {% if query %}<table>
-            {% for result in page.object_list %}
-                <tr>
-                <td style="width:75%; padding-top: 10px; padding-bottom: 0px;">
-                    {% if result.content_type == "news.news" %}
-                    <h3><a href="{{ result.object.get_absolute_url }}">{{ result.object.headline }}</a></h3>
-                    {% elif result.content_type == "com.compage" %}
-                    <h3><a href="{% url "show_com_page" result.object.get_canonical_name %}">{{ result.object.com.name }}</a></h3>
-                    {% elif result.content_type == "accounts.nablauser" %}
-                    <h3><a href="{% url "member_profile" result.object %}">{{ result.object }}</a> ({{ result.object.get_full_name }})</h3>
-                    {% endif %}
-                </td>
-                <td></td>
-                <td style="width:25%;">
-                    {% if result.content_type == "news.news" %}{{ result.object.created_date }}{% elif result.content_type == "com.compage" %}
-                    {{ result.object.last_changed_date }}{% endif %}
-                </td>
-                </tr>
-                <tr>
-                <td colspan="3" style="padding-right: 3em; padding-bottom: 20px;">
-                    {% if result.content_type == "news.news" %}
-                    <p>{{ result.object.lead_paragraph|truncatewords_html:58 }}</p>
-                    {% elif result.content_type == "com.compage" %}
-                    <p>{{ result.object.description|truncatewords_html:58 }}</p>
-                    {% elif result.content_type == "accounts.nablauser" %}
-                    <p>{% if result.object.about %}{{ result.object.about|truncatewords_html:58 }}{% else %}Denne brukeren har dessverre ikke skrevet noe om seg selv.{% endif %}</p>
-                    {% endif %}
-                </td>
-                </tr>
-            {% empty %}
-                <p style="padding-top: 10px;">Ingen treff på "{{ query }}".</p>
-            {% endfor %}</table>
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Forrige{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Neste &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
+{% if query %}
+<div>
+    {% for result in page.object_list %}
+        <div class="media">
+            {% if result.object.avatar %}
+            <div class="media-left">
+                 <img class="media-object" src="{% thumbnail result.object.avatar 150x150 %}">
+            </div>
+            {% elif result.object.image %}
+            <div class="media-left">
+                 <img class="media-object" src="{% thumbnail result.object.image 150x150 %}">
+            </div>
+            {% elif result.object.picture %}
+            <div class="media-left">
+                 <img class="media-object" src="{% thumbnail result.object.picture 150x150 %}">
+            </div>
             {% endif %}
-        {% else %}
-             <p style="padding-top: 10px;">Skriv inn noe i feltet over for å søke.</p>
-        {% endif %}
-    </form>
+            <div class="media-body">
+            <div class="media-heading">
+            {% if result.content_type == "content.news" %}
+            <a href="{{ result.object.get_absolute_url }}">{{ result.object.headline }}</a>
+            {% elif result.content_type == "com.compage" %}
+            <a href="{% url "show_com_page" result.object.get_canonical_name %}">{{ result.object.com.name }}</a>
+            {% elif result.content_type == "accounts.nablauser" %}
+            <a href="{% url "member_profile" result.object %}">{{ result.object }}</a> ({{ result.object.get_full_name }})
+            {% else %}
+                <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
+            {% endif %}
+            </div>
+            {% if result.content_type == "content.news" %}
+            {{ result.object.created_date }}
+            {% elif result.content_type == "com.compage" %}
+            {{ result.object.last_changed_date }}{% endif %}
+
+            {% if result.content_type == "content.news" %}
+            <p>{{ result.object.lead_paragraph|truncatewords_html:58 }}</p>
+            {% elif result.content_type == "com.compage" %}
+            <p>{{ result.object.description|truncatewords_html:58 }}</p>
+            {% elif result.content_type == "accounts.nablauser" %}
+            <p>{% if result.object.about %}{{ result.object.about|truncatewords_html:58 }}{% else %}Denne brukeren har dessverre ikke skrevet noe om seg selv.{% endif %}</p>
+            {% endif %}
+            </div>
+        </div>
+    {% empty %}
+        <p style="padding-top: 10px;">Ingen treff på "{{ query }}".</p>
+    {% endfor %}
+</div>
+
+{% if page.has_previous or page.has_next %}
+    <div>
+        {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Forrige{% if page.has_previous %}</a>{% endif %}
+        |
+        {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Neste &raquo;{% if page.has_next %}</a>{% endif %}
+    </div>
+{% endif %}
+{% else %}
+ <p style="padding-top: 10px;">Skriv inn noe i feltet over for å søke.</p>
+{% endif %}
 {% endblock %}
