--- a/templates/flatpages/custom.html
+++ b/templates/flatpages/custom.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load mediawiki_links %}
-{% load markdown_deux_tags %}
+{% load markdown %}
 {% load flatpages %}
 
 {% block title %}
