--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,7 +1,8 @@
 /* MAIN */
-    body {
-        background-color: #000; /* Background-color of footer */
-    }
+
+body {
+  margin-top: 60px;
+}
 
     /* Div that holds all parts of page except footer */
     #whitebox {
@@ -20,18 +21,8 @@
         }
     }
 
-    header {
-        margin-bottom: 15px;
-        overflow: hidden;    /* clear floats */
-    }
-
-    header img { width: 200px; }
     aside h3 { margin-top: 15px; }
     aside h3:first-child { margin-top: 0; }
-
-    .news-picture {
-        width: 100%;
-    }
 
     form.dropdown-menu {
         padding: 15px;
@@ -178,18 +169,17 @@
 
 
 /* FOOTER */
-    footer { 
+    footer {
         /* TODO: Add cross-browser support */
         background-color: black;
         border-top:1px solid #666;
-        color: #ccc; 
-        padding-bottom: 30px;
-        padding-top: 30px; 
+        color: #ccc;
+        padding-top: 30px;
     }
-        
+
     /* h2 is black, so make it white */
     footer h2 {
-        color: #ccc; 
+        color: #ccc;
     }
     footer a { color: #bddeff; }
 
@@ -219,8 +209,8 @@
         height: 100px;
     }
     .comment .text { width: 100%; overflow: hidden; }
-    .comment .info { margin-bottom: 10px; } 
-    .comment .author { font-weight: bold; } 
+    .comment .info { margin-bottom: 10px; }
+    .comment .author { font-weight: bold; }
     .comment .date { color: #999; }
 
     #comment-help-buttons {
@@ -267,4 +257,3 @@ li.pager-counter {
     font-size: 50px;
     padding: 10px;
 }
-
