--- a/templates/wiki/base_site.html
+++ b/templates/wiki/base_site.html
@@ -1,29 +1,7 @@
-{% load sekizai_tags i18n wiki_tags %}{% load url from future %}<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{% block wiki_pagetitle %}{% endblock %}{% block wiki_site_title %}{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="www.django-wiki.org">
-
-    <!-- Le styles -->
-    <link href="{{ STATIC_URL }}wiki/bootstrap/css/wiki-bootstrap.min.css" rel="stylesheet">
-        
-    {% render_block "css" %}
-    
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-  </head>
-
-  <body>
-
+{% extends "base.html" %}
+{% load sekizai_tags i18n wiki_tags %}{% load url from future %}
     {% block wiki_body %}
-    
+
     {% block wiki_navbar %}
     <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -86,6 +64,7 @@
       </div>
     </div>
     {% endblock %}
+    {% block main %}
 
     <div class="container" style="margin-top: 60px;">
 
@@ -101,30 +80,15 @@
 
       <!-- Reserved for breadcrumbs -->
       {% block wiki_breadcrumbs %}{% endblock %}
-      
+
       <!-- Main page contents go here -->
+      {% block content %}
       {% block wiki_contents %}{% endblock %}
-      
-      <footer id="wiki-footer">
-        <hr />
-        {% block wiki_footer_prepend %}
-        {% endblock %}
-        <p>{% blocktrans %}Powered by <a href="http://www.django-wiki.org">django-wiki</a>, an open source application under the <a href="http://www.gnu.org/licenses/quick-guide-gplv3.html">GPLv3</a> license. Let knowledge be the cure.{% endblocktrans %}</p>
-        <div style="clear: both"></div>
-      </footer>
+      {% endblock content %}
+
       </div>
+      {% endblock main %}
 
     </div> <!-- /container -->
 
     {% endblock %}
-
-    <script src="{{ STATIC_URL }}wiki/js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}wiki/js/core.js"></script>
-    <script src="{{ STATIC_URL }}wiki/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Optionally enable responsive features in IE8 -->
-    <script src="{{ STATIC_URL }}wiki/js/respond.min.js"></script>
-    {% render_block "js" %}
-  
-  </body>
-</html>
-
