--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,7 @@
               <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
               <li><a href="{% url "albums" %}">Bilder</a></li>
               <li><a href="{% url "blog" %}">Blogg</a></li>
+              <li><a href="{% url "advent_calendar" "2015" %}">Julekalender 2015</a></li>
             </ul>
         </li>
 
