--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     <!-- Navigation -->
     <header>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <a class="pull-left" href="/">
+      <a class="logo pull-left" href="/">
           {% block header_logo %}
               <img src="{% static "img/nabla_logo_white.png" %}" alt="Nabla">
           {% endblock header_logo %}
@@ -142,6 +142,16 @@
 
                   </ul>
                   {# end navigasjonslenker #}
+                <form class="form-inline" id="searchtop" method="get" action="{% url "haystack_search" %}">
+                        <div class="input-group">
+                            <input name="q" placeholder="Søk..." type="text" class="form-control">
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </form>
 
                   <ul class="nav navbar-nav navbar-right">
                       {% if user.is_authenticated %}
@@ -193,10 +203,10 @@
     </nav>
   </header>
   {% bootstrap_messages %}
-  {% block main %}
+
     <!-- Page Content -->
     <div class="container">
-
+{% block main %}
         <div class="row">
 
             <!-- Blog Entries Column -->
@@ -269,30 +279,15 @@
 
             <!-- Blog Sidebar Widgets Column -->
             <div class="col-md-4">
-                <!-- Blog Search Well -->
-                <div class="well">
-                  <h4>Søk</h4>
-                    <form id="searchtop" method="get" action="{% url "haystack_search" %}">
-                        <div class="input-group">
-                            <input name="q" placeholder="Søk..." type="text" class="form-control">
-                            <span class="input-group-btn">
-                                <button type="submit" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-search"></span>
-                                </button>
-                            </span>
-                        </div>
-                    </form>
-                    <!-- /.input-group -->
-                </div>
-
                 {% block sidebar %}
                 {% endblock sidebar %}
             </div>
 
         </div>
         <!-- /.row -->
-      </div>
         {% endblock main %}
+      </div>
+
         <!-- Footer -->
         <footer>
 
