--- a/content/templates/content/events/includes/upcoming_events.html
+++ b/content/templates/content/events/includes/upcoming_events.html
@@ -1,31 +1,29 @@
 {% load sekizai_tags %}
+{% addtoblock "css" %}
+    <link href="{{ STATIC_URL }}events/upcoming_events.css" rel="stylesheet">
+{% endaddtoblock %}
 
-{% if upcoming_events %}
+<h3>Kommende arrangementer</h3>
+<div class="well upcoming"><!-- kommende arrangement -->
+    <ul class="nav">
+        {% for event in upcoming_events %}
+            <li>
+                <a href="{{ event.get_absolute_url }}">
+                    <time class="label label-info"
+                          datetime="{{ event.event_start|date:"c" }}">
+                        {{ event.event_start|date:"j.m" }}
+                    </time>
+                    {{ event.headline }}
+                    {% if event.registration_required %}
+                        <span title="Ledige plasser / Totalt antall plasser">
+                            {{ event.users_attending }}/{{ event.places }}
+                        </span>
+                    {% endif %}
+                </a>
+            </li>
+        {% empty %}
+        <li>Ingen arrangementer</li>
+        {% endfor %}
+    </ul>
+</div>
 
-    {% addtoblock "css" %}
-        <link href="{{ STATIC_URL }}events/upcoming_events.css" rel="stylesheet">
-    {% endaddtoblock %}
-
-    <h3>Kommende arrangement</h3>
-    <div class="well upcoming"><!-- kommende arrangement -->
-        <ul class="nav">
-            {% for event in upcoming_events %}
-                <li>
-                    <a href="{{ event.get_absolute_url }}">
-                        <time class="label label-info"
-                              datetime="{{ event.event_start|date:"c" }}">
-                            {{ event.event_start|date:"j.m" }}
-                        </time>
-                        {{ event.headline }} 
-                        {% if event.registration_required %}
-                            <span title="Ledige plasser / Totalt antall plasser">
-                                {{ event.users_attending }}/{{ event.places }}
-                            </span>
-                        {% endif %}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div><!-- end kommende arrangement -->
-
-{% endif %}
