--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -7,23 +7,52 @@
 {% endblock %}
 
 {% block content %}
-
+<h3>Nyheter</h3>
 {% for row in news_list|row_split:2 %}
 
-    <div class="row">
-    {% for news in row %}
-            {% include "content/news/news_summary_include.html" with narrow="True" %}
-    {% endfor %}
+<div class="row">
+{% for news in row %}
+<article class="col-md-6">
+    <div class="box {{ news.content_type.model }}">
+    {% if news.as_child_class.correct_cropping and news.as_child_class.correct_picture %}
+        <a href="{{ news.get_absolute_url }}">
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 360x200 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
+        </a>
+    {% elif news.as_child_class.correct_picture %}
+        <a href="{{ news.get_absolute_url }}">
+            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 360x200 quality=95 upscale crop="smart" detail %}">
+        </a>
+    {% endif %}
+    <header>
+    <h2>
+        <a href="{{ news.get_absolute_url }}">{{ news.headline }}</a>
+    </h2>
+    </header>
+    <p>{{ news.lead_paragraph}}</p>
     </div>
+</article>
+{% endfor %}
+</div>
 
 {% endfor %}
+<div class="row">
+    <div class="col-md-6">
+        <h3>Arrangementer</h3>
+        {% include "includes/upcoming_events.html" with upcomming=upcomming_events class="c-event" %}
+    </div>
+    <div class="col-md-6">
+        <h3>Bedpres</h3>
+        {% include "includes/upcoming_events.html" with upcomming=upcomming_bedpreses class="c-bedpres"%}
+    </div>
+</div>
 
-{% include "includes/pagination.html" %}
-<h2>Nye Nablad</h2>
+<h3>Siste Nablad</h3>
 <div class="row">
     {% for nablad in new_nablad %}
-            <div class="col-md-8">
-                <img src="{% thumbnail nablad.thumbnail 300x400 %}">
+            <div class="col-md-3">
+                <a class="thumbnail" href="{{ nablad.get_absolute_url }}">
+                    <img src="{% thumbnail nablad.thumbnail 280x400 %}">
+                </a>
             </div>
     {% endfor %}
 </div>
@@ -32,8 +61,6 @@
 
 
 {% block sidebar %}
-
-    {% include "content/events/includes/upcoming_events.html" %}
     {% if sidebarinfo %}
         <h2>{{ sidebarinfo.title }}</h2>
         <p>
@@ -54,6 +81,3 @@
 
 {% endblock sidebar %}
 
-{% block below_ad %}
-
-{% endblock below_ad %}
