--- a/static/css/default.css
+++ b/static/css/default.css
@@ -90,25 +90,16 @@ nav.navbar {
         margin-top: 15px;
     }
 
-    #whitebox h2, #whitebox h3 {
-        color: rgb(35,35,35);
-    }
-
-    #whitebox h2 a, #whitebox h3 a {
-        color: inherit;
-    }
-
-    #whitebox h2 a:hover, #whitebox h3 a:hover {
-        color: rgb(50, 50, 50);
-        text-decoration: none;
-    }
-
     h3 {
         margin-bottom: 8px;
         font-size: 24px;
         font-weight: bold;
         line-height: 28px;
     }
+
+h3 a, h3 a:hover, h3 a:active, h3 a:focus{
+    color: #222222;
+}
 
     p {
         font-size: 14px;
