--- a/templates/includes/event_widget.html
+++ b/templates/includes/event_widget.html
@@ -4,7 +4,7 @@
         {% include "includes/upcoming_events.html" with upcoming=upcoming_events class="c-event" %}
     </div>
     <div class="col-md-6">
-        <h3>Bedpres</h3>
+        <h3>Bedriftpresentasjon</h3>
         {% include "includes/upcoming_events.html" with upcoming=upcoming_bedpreses class="c-bedpres"%}
     </div>
 </div>
