--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -29,13 +29,16 @@
 </article>
 {% endwith %}
 
+<div class="well">
 {% include "includes/event_widget.html" %}
+</div>
 <div class="row">
 {% for news in news_list_1 %}
 {% include "includes/article_widget.html" %}
 {% endfor %}
 </div>
 
+<div class="well">
 <h3><a href="{% url "nablad_list" %}">Siste Nablad</a></h3>
 <div class="row">
 {% for nablad in new_nablad %}
@@ -46,12 +49,14 @@
     </div>
 {% endfor %}
 </div>
+</div>
 <div class="row">
 {% for news in news_list_2 %}
 {% include "includes/article_widget.html" %}
 {% endfor %}
 </div>
 
+<div class="well">
 <h3><a href="{% url "albums" %}">Album</a></h3>
 <div class="row">
 {% for album in album_list %}
@@ -66,6 +71,7 @@
     </div>
 </div>
 {% endfor %}
+</div>
 </div>
 
 <div class="row">
