Legg til img-responsive til forsidebildet

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -12,11 +12,11 @@
     <div class="box {{ news.content_type.model }}">
     {% if news.as_child_class.correct_cropping and news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 760x300 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
+            <img alt="" class="img-responsive" src="{% thumbnail news.as_child_class.correct_picture 760x300 box=news.as_child_class.correct_cropping upscale quality=95 detail %}">
         </a>
     {% elif news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
-            <img alt="" class="news-picture" src="{% thumbnail news.as_child_class.correct_picture 760x300 quality=95 upscale crop="smart" detail %}">
+            <img alt="" class="img-responsive" src="{% thumbnail news.as_child_class.correct_picture 760x300 quality=95 upscale crop="smart" detail %}">
         </a>
     {% endif %}
     <header>
