Easy_thumbnails templatetag hack
Adding a hack to ensure use of easy_thumbnails templatetags instead
sorl.thumbnail.

--- a/content/templates/content/album_list.html
+++ b/content/templates/content/album_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load listutil %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% block title %}Bilder{% endblock %}
 
 {% block more_head %}
