--- a/content/templates/content/news/includes/text_content.html
+++ b/content/templates/content/news/includes/text_content.html
@@ -1,7 +1,5 @@
 {% load markdown %}
-{% load mediawiki_links %}
-{% load thumbnail %}
-{% load cropping %}
+{% load easy_thumbnails %}
 
 
 <div class="box">
