--- a/content/templates/content/album_overview.html
+++ b/content/templates/content/album_overview.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load listutil %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% block title %}Bilder{% endblock %}
 
 {% block more_head %}
